{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 21,
  "lineage": "936b4376-e7ea-d3c9-04a5-48f26eec8e93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067c706a4deaaa488",
            "arn": "arn:aws:ec2:us-east-1:730335665798:elastic-ip/eipalloc-067c706a4deaaa488",
            "domain": "vpc",
            "id": "eipalloc-067c706a4deaaa488",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-197-157-189.compute-1.amazonaws.com",
            "public_ip": "34.197.157.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myEIP"
            },
            "tags_all": {
              "Name": "myEIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:730335665798:instance/i-0549b401d7e768544",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0549b401d7e768544",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyjoe",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0965082a403c7a5ea",
            "private_dns": "ip-10-0-1-52.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fbfaf8c8a7b74c85",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3f6009c62fa5c7b",
            "tags": {
              "Name": "private_server"
            },
            "tags_all": {
              "Name": "private_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0710ff5b407ef458e"
            ]
          },
          "dependencies": [
            "aws_security_group.myPrivateSecurityGroup",
            "aws_subnet.myPrivateSubnet",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:730335665798:instance/i-091f665a01ddb4304",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091f665a01ddb4304",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyjoe",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0266ca5bb25e6232b",
            "private_dns": "ip-10-0-0-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.119",
            "public_ip": "3.239.71.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eaf50adc3e64647b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d86613b8bd5e3ddd",
            "tags": {
              "Name": "public_server"
            },
            "tags_all": {
              "Name": "public_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0faf69e4fdbc398f3"
            ]
          },
          "dependencies": [
            "aws_security_group.myPublicSecurityGroup",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myInternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:internet-gateway/igw-0aad31f39587be012",
            "id": "igw-0aad31f39587be012",
            "owner_id": "730335665798",
            "tags": {
              "Name": "myInternetGateway"
            },
            "tags_all": {
              "Name": "myInternetGateway"
            },
            "vpc_id": "vpc-0ef3bf79eca364b44"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myNATgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067c706a4deaaa488",
            "association_id": "eipassoc-083430347e0c7af80",
            "connectivity_type": "public",
            "id": "nat-0aef99f36b97e8928",
            "network_interface_id": "eni-0dcd852b5f47f7e9c",
            "private_ip": "10.0.0.214",
            "public_ip": "34.197.157.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d86613b8bd5e3ddd",
            "tags": {
              "Name": "myNATgateway"
            },
            "tags_all": {
              "Name": "myNATgateway"
            }
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04611404c48858a8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aef99f36b97e8928",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04611404c48858a8d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myEIP",
            "aws_nat_gateway.myNATgateway",
            "aws_route_table.myPrivateRouteTable",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:route-table/rtb-04611404c48858a8d",
            "id": "rtb-04611404c48858a8d",
            "owner_id": "730335665798",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myPrivateRouteTable"
            },
            "tags_all": {
              "Name": "myPrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef3bf79eca364b44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:route-table/rtb-02c67b749698c7920",
            "id": "rtb-02c67b749698c7920",
            "owner_id": "730335665798",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aad31f39587be012",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myPublicRouteTable"
            },
            "tags_all": {
              "Name": "myPublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef3bf79eca364b44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myInternetGateway",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubpubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0216d8c467ed6134c",
            "route_table_id": "rtb-02c67b749698c7920",
            "subnet_id": "subnet-0d86613b8bd5e3ddd"
          },
          "dependencies": [
            "aws_internet_gateway.myInternetGateway",
            "aws_route_table.myPublicRouteTable",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtsubpvtrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e8592930293604",
            "route_table_id": "rtb-04611404c48858a8d",
            "subnet_id": "subnet-0a3f6009c62fa5c7b"
          },
          "dependencies": [
            "aws_route_table.myPrivateRouteTable",
            "aws_subnet.myPrivateSubnet",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myPrivateSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:security-group/sg-0710ff5b407ef458e",
            "description": "Allow public security group inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0710ff5b407ef458e",
            "ingress": [],
            "name": "myPrivateSecurityGroup",
            "name_prefix": "",
            "owner_id": "730335665798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myPrivateSecurityGroup"
            },
            "tags_all": {
              "Name": "myPrivateSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef3bf79eca364b44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myPublicSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:security-group/sg-0faf69e4fdbc398f3",
            "description": "Allow SSH and http inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0faf69e4fdbc398f3",
            "ingress": [],
            "name": "myPublicSecurityGroup",
            "name_prefix": "",
            "owner_id": "730335665798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myPublicSecurityGroup"
            },
            "tags_all": {
              "Name": "myPublicSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef3bf79eca364b44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-194259659",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0710ff5b407ef458e",
            "security_group_rule_id": "sgr-02c88374eb3cb283c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.myPrivateSecurityGroup",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-8461713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0710ff5b407ef458e",
            "security_group_rule_id": "sgr-0f49f7ac627aa48c5",
            "self": false,
            "source_security_group_id": "sg-0faf69e4fdbc398f3",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.myPrivateSecurityGroup",
            "aws_security_group.myPublicSecurityGroup",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myPrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:subnet/subnet-0a3f6009c62fa5c7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3f6009c62fa5c7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335665798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myPrivateSubnet"
            },
            "tags_all": {
              "Name": "myPrivateSubnet"
            },
            "vpc_id": "vpc-0ef3bf79eca364b44"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myPublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:subnet/subnet-0d86613b8bd5e3ddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d86613b8bd5e3ddd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335665798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myPublicSubnet"
            },
            "tags_all": {
              "Name": "myPublicSubnet"
            },
            "vpc_id": "vpc-0ef3bf79eca364b44"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:vpc/vpc-0ef3bf79eca364b44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fced32cbbe868083",
            "default_route_table_id": "rtb-01dbe502dc1985814",
            "default_security_group_id": "sg-0abe2e9b4a19f22d5",
            "dhcp_options_id": "dopt-0f988b77c2d28a54b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef3bf79eca364b44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01dbe502dc1985814",
            "owner_id": "730335665798",
            "tags": {
              "Name": "myVPC"
            },
            "tags_all": {
              "Name": "myVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:security-group-rule/sgr-0e3036fa2f66584e0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0e3036fa2f66584e0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0faf69e4fdbc398f3",
            "security_group_rule_id": "sgr-0e3036fa2f66584e0",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.myPublicSecurityGroup",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:security-group-rule/sgr-0099b04a04206710e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0099b04a04206710e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0faf69e4fdbc398f3",
            "security_group_rule_id": "sgr-0099b04a04206710e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.myPublicSecurityGroup",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335665798:security-group-rule/sgr-0fd913abcfae442ab",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fd913abcfae442ab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0faf69e4fdbc398f3",
            "security_group_rule_id": "sgr-0fd913abcfae442ab",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.myPublicSecurityGroup",
            "aws_vpc.myVPC"
          ]
        }
      ]
    }
  ]
}